# newsloom

./: .buildinfo  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ecs  Dockerfile.frontend  FRONTEND_SETUP.md  README.md  bandit.yaml  build-frontend.sh  buildspec.yml  dev-nginx.conf  docker-compose.frontend.yml  docker-compose.yml  docker-entrypoint.sh  genindex.html  index.html  nginx.conf  nginx.frontend.conf  nginx_ecs.conf  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  supervisord.conf  supervisord.docker.conf
.github/workflows/: deploy-docs.yml  deploy-ecs.yml
_sources/: index.rst.txt
_sources/cases/: index.rst.txt
_sources/chat/: slack_integration.rst.txt
_sources/schemas/: examples.rst.txt
_sources/tasks/: available_tasks.rst.txt  creating_tasks.rst.txt  examples.rst.txt
_static/: alabaster.css
agents/: index.html
api/: authentication.html  index.html  rest_endpoints.html  websockets.html
cases/: index.html
chat/: index.html  slack_integration.html  telegram_integration.html
deployment/: docker.html  index.html  static_files.html
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
newsloom/: conftest.py  manage.py  requirements.txt
newsloom/agents/: admin.py  models.py
newsloom/chat/: README_CONTEXT_MANAGEMENT.md  admin.py  chat_consumer.py  constants.py  consumers.py  message_processor.py  message_storage.py  middleware.py  models.py  routing.py  system_prompt.py  tool_functions.py  tools.py  urls.py  views.py
newsloom/frontend/: example_login.js  urls.py  (+4 more)
schemas/: creating_schemas.html  examples.html
scripts/: run_linters.py
tasks/: available_tasks.html  creating_tasks.html  examples.html  index.html
(+223 files in other folders)
