[project]
name = "newsloom"
version = "0.1.0"
description = ""
authors = [
    {name = "Newsloom Service",email = "info@ctlab.io"}
]
readme = "README.md"
requires-python = " >=3.13,<4.0"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "sentry-sdk (>=2.24.1,<3.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "playwright (>=1.51.0,<2.0.0)",
    "tf-playwright-stealth (>=1.1.2,<2.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "duckduckgo-search (>=7.5.5,<8.0.0)",
    "anthropic[bedrock] (>=0.49.0,<0.50.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "crawl4ai (>=0.5.0.post8,<0.6.0)",
    "google-api-python-client (>=2.166.0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "uwsgi (>=2.0.29,<3.0.0)",
    "mcp (>=1.6.0,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
bandit = "^1.8.3"

[tool.poetry.group.doc.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


